@@ -4,6 +4,8 @@ v1.0.2
 	- Changed daemons -start and -stop commands to start and stop, respectively.
 	- Added extra messages to the console, allowed commands will only show if the user types "command -help" instead of showing them
 	  by default on "command/option miss".
+	- Added the -d -(start | stop) -a option removed in v1.0.1
+	- The console no longer "auto-kills" the daemons when starting the threads, instead the user is asked to kill the daemons manually
 v1.0.1
 	- Fixed an issue related to Wikipedia's spanish dates formats.
 	- Fixed an issue related to messages formats, having a message with %'s in it would break the log function.
@@ -15,6 +17,6 @@ v1.0.1
 	- Added extra logic to the daemons-console interaction, daemons cannot be started while a console is running but a console can be
 	  started while daemons are running. If threads are started in console mode then the respective daemons are killed beforehand.
 	- /tmp directory is created automatically if it doesn't exist.
-	- Added SIGTERM, Ctrl + C and Ctrl + D handlers to the console in order to avoid data corruption.
+	- Added SIGTERM, Ctrl + C and Ctrl + D handlers to the console and daemons (SIGTERM) in order to avoid data corruption.
 v1.0.0
 	- Version 1.0.0
